# sharex-server-cuz-why-not

./: Cargo.toml
src/: main.rs
