[package]
name = "sharex-server-cuz-why-not"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4"
chrono = "0.4.40"
env_logger = "0.9"
futures = "0.3.31"
log = "0.4"
mime_guess = "2.0.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0" 
sysinfo = "0.34.2"
